src/test/deca/syntax/valid/print_int.deca
// Description:
//    test du syntax d'affichage d'un entier 
//
// Resultats:
//   
//
// Historique:
//    cree le 22/01/2022

{
    int i ;
    println(i) ;
}